syntax = "proto3";
package tikv.raw;

import "error.proto";

service Client {
    rpc Get (GetRequest) returns (GetReply);
    rpc Put (PutRequest) returns (PutReply);
}

message GetRequest {
    string key = 1;
}

message GetReply {
    string value = 1;
    tikv.error.Error error = 2;
}

message PutRequest {
    string key = 1;
    string value = 2;
}

message PutReply {
    tikv.error.Error error = 1;
}
